--- a/1-21.ipynb
+++ b/1-21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "6cdc7e7a-6614-4e87-bd04-a3081ea8a553",
    "metadata": {},
    "outputs": [],
@@ -10,303 +10,115 @@
     "import numpy as np\n",
     "import smt\n",
     "from smt.surrogate_models import KRG\n",
-    "import scipy as sp"
+    "from smt.sampling_methods import LHS\n",
+    "from scipy.integrate import quad, dblquad\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "999389b9-d959-4b21-8f5d-906cc31552a8",
+   "execution_count": 17,
+   "id": "d6042c16-67aa-402f-920e-71f1f3ce536c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def circle(x,y):\n",
-    "    return x**2+y**2"
+    "def integrand(x,y):\n",
+    "    return math.exp((-1)*(x**2) + (-1)*(y**2))\n",
+    "    \n",
+    "def loss(x1,x2,y1):\n",
+    "    if x1 == x2:\n",
+    "        return 0\n",
+    "    y2 = 1/(x2-x1) + y1\n",
+    "    return dblquad(integrand, x1,x2, lambda t: y1,lambda t: y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a4b8ac15-3d4c-465f-a4f3-ed962ea266f3",
+   "execution_count": 18,
+   "id": "550fb988-9cc4-4c87-8a12-fba0edee3fb5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "(0.5577462853510337, 8.291374381535406e-15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circle(1,2)"
+    "loss(0,1,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b0237975-61d8-40c0-8b6b-f405fa6b27e1",
+   "execution_count": 33,
+   "id": "20f344d6-76c0-4a9a-a3af-cf90572aee08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlimits = np.array([[0.0, 4.0], [0.0, 3.0], [0.0,4.0]])\n",
+    "sampling = LHS(xlimits=xlimits)\n",
+    "xt = sampling(10)\n",
+    "yt = np.array([loss(i,j,k) for i,j,k in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "acf174d0-7ae6-442e-b157-69d860464964",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mType:\u001b[0m        module\n",
-       "\u001b[0;31mString form:\u001b[0m <module 'scipy.stats.qmc' from '/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/scipy/stats/qmc.py'>\n",
-       "\u001b[0;31mFile:\u001b[0m        /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/scipy/stats/qmc.py\n",
-       "\u001b[0;31mDocstring:\u001b[0m  \n",
-       "====================================================\n",
-       "Quasi-Monte Carlo submodule (:mod:`scipy.stats.qmc`)\n",
-       "====================================================\n",
-       "\n",
-       ".. currentmodule:: scipy.stats.qmc\n",
-       "\n",
-       "This module provides Quasi-Monte Carlo generators and associated helper\n",
-       "functions.\n",
-       "\n",
-       "\n",
-       "Quasi-Monte Carlo\n",
-       "=================\n",
-       "\n",
-       "Engines\n",
-       "-------\n",
-       "\n",
-       ".. autosummary::\n",
-       "   :toctree: generated/\n",
-       "\n",
-       "   QMCEngine\n",
-       "   Sobol\n",
-       "   Halton\n",
-       "   LatinHypercube\n",
-       "   PoissonDisk\n",
-       "   MultinomialQMC\n",
-       "   MultivariateNormalQMC\n",
-       "\n",
-       "Helpers\n",
-       "-------\n",
-       "\n",
-       ".. autosummary::\n",
-       "   :toctree: generated/\n",
-       "\n",
-       "   discrepancy\n",
-       "   geometric_discrepancy\n",
-       "   update_discrepancy\n",
-       "   scale\n",
-       "\n",
-       "\n",
-       "Introduction to Quasi-Monte Carlo\n",
-       "=================================\n",
-       "\n",
-       "Quasi-Monte Carlo (QMC) methods [1]_, [2]_, [3]_ provide an\n",
-       ":math:`n \\times d` array of numbers in :math:`[0,1]`. They can be used in\n",
-       "place of :math:`n` points from the :math:`U[0,1]^{d}` distribution. Compared to\n",
-       "random points, QMC points are designed to have fewer gaps and clumps. This is\n",
-       "quantified by discrepancy measures [4]_. From the Koksma-Hlawka\n",
-       "inequality [5]_ we know that low discrepancy reduces a bound on\n",
-       "integration error. Averaging a function :math:`f` over :math:`n` QMC points\n",
-       "can achieve an integration error close to :math:`O(n^{-1})` for well\n",
-       "behaved functions [2]_.\n",
-       "\n",
-       "Most QMC constructions are designed for special values of :math:`n`\n",
-       "such as powers of 2 or large primes. Changing the sample\n",
-       "size by even one can degrade their performance, even their\n",
-       "rate of convergence [6]_. For instance :math:`n=100` points may give less\n",
-       "accuracy than :math:`n=64` if the method was designed for :math:`n=2^m`.\n",
-       "\n",
-       "Some QMC constructions are extensible in :math:`n`: we can find\n",
-       "another special sample size :math:`n' > n` and often an infinite\n",
-       "sequence of increasing special sample sizes. Some QMC\n",
-       "constructions are extensible in :math:`d`: we can increase the dimension,\n",
-       "possibly to some upper bound, and typically without requiring\n",
-       "special values of :math:`d`. Some QMC methods are extensible in\n",
-       "both :math:`n` and :math:`d`.\n",
-       "\n",
-       "QMC points are deterministic. That makes it hard to estimate the accuracy of\n",
-       "integrals estimated by averages over QMC points. Randomized QMC (RQMC) [7]_\n",
-       "points are constructed so that each point is individually :math:`U[0,1]^{d}`\n",
-       "while collectively the :math:`n` points retain their low discrepancy.\n",
-       "One can make :math:`R` independent replications of RQMC points to\n",
-       "see how stable a computation is. From :math:`R` independent values,\n",
-       "a t-test (or bootstrap t-test [8]_) then gives approximate confidence\n",
-       "intervals on the mean value. Some RQMC methods produce a\n",
-       "root mean squared error that is actually :math:`o(1/n)` and smaller than\n",
-       "the rate seen in unrandomized QMC. An intuitive explanation is\n",
-       "that the error is a sum of many small ones and random errors\n",
-       "cancel in a way that deterministic ones do not. RQMC also\n",
-       "has advantages on integrands that are singular or, for other\n",
-       "reasons, fail to be Riemann integrable.\n",
-       "\n",
-       "(R)QMC cannot beat Bahkvalov's curse of dimension (see [9]_). For\n",
-       "any random or deterministic method, there are worst case functions\n",
-       "that will give it poor performance in high dimensions. A worst\n",
-       "case function for QMC might be 0 at all n points but very\n",
-       "large elsewhere. Worst case analyses get very pessimistic\n",
-       "in high dimensions. (R)QMC can bring a great improvement over\n",
-       "MC when the functions on which it is used are not worst case.\n",
-       "For instance (R)QMC can be especially effective on integrands\n",
-       "that are well approximated by sums of functions of\n",
-       "some small number of their input variables at a time [10]_, [11]_.\n",
-       "That property is often a surprising finding about those functions.\n",
-       "\n",
-       "Also, to see an improvement over IID MC, (R)QMC requires a bit of smoothness of\n",
-       "the integrand, roughly the mixed first order derivative in each direction,\n",
-       ":math:`\\partial^d f/\\partial x_1 \\cdots \\partial x_d`, must be integral.\n",
-       "For instance, a function that is 1 inside the hypersphere and 0 outside of it\n",
-       "has infinite variation in the sense of Hardy and Krause for any dimension\n",
-       ":math:`d = 2`.\n",
-       "\n",
-       "Scrambled nets are a kind of RQMC that have some valuable robustness\n",
-       "properties [12]_. If the integrand is square integrable, they give variance\n",
-       ":math:`var_{SNET} = o(1/n)`. There is a finite upper bound on\n",
-       ":math:`var_{SNET} / var_{MC}` that holds simultaneously for every square\n",
-       "integrable integrand. Scrambled nets satisfy a strong law of large numbers\n",
-       "for :math:`f` in :math:`L^p` when :math:`p>1`. In some\n",
-       "special cases there is a central limit theorem [13]_. For smooth enough\n",
-       "integrands they can achieve RMSE nearly :math:`O(n^{-3})`. See [12]_\n",
-       "for references about these properties.\n",
-       "\n",
-       "The main kinds of QMC methods are lattice rules [14]_ and digital\n",
-       "nets and sequences [2]_, [15]_. The theories meet up in polynomial\n",
-       "lattice rules [16]_ which can produce digital nets. Lattice rules\n",
-       "require some form of search for good constructions. For digital\n",
-       "nets there are widely used default constructions.\n",
-       "\n",
-       "The most widely used QMC methods are Sobol' sequences [17]_.\n",
-       "These are digital nets. They are extensible in both :math:`n` and :math:`d`.\n",
-       "They can be scrambled. The special sample sizes are powers\n",
-       "of 2. Another popular method are Halton sequences [18]_.\n",
-       "The constructions resemble those of digital nets. The earlier\n",
-       "dimensions have much better equidistribution properties than\n",
-       "later ones. There are essentially no special sample sizes.\n",
-       "They are not thought to be as accurate as Sobol' sequences.\n",
-       "They can be scrambled. The nets of Faure [19]_ are also widely\n",
-       "used. All dimensions are equally good, but the special sample\n",
-       "sizes grow rapidly with dimension :math:`d`. They can be scrambled.\n",
-       "The nets of Niederreiter and Xing [20]_ have the best asymptotic\n",
-       "properties but have not shown good empirical performance [21]_.\n",
-       "\n",
-       "Higher order digital nets are formed by a digit interleaving process\n",
-       "in the digits of the constructed points. They can achieve higher\n",
-       "levels of asymptotic accuracy given higher smoothness conditions on :math:`f`\n",
-       "and they can be scrambled [22]_. There is little or no empirical work\n",
-       "showing the improved rate to be attained.\n",
-       "\n",
-       "Using QMC is like using the entire period of a small random\n",
-       "number generator. The constructions are similar and so\n",
-       "therefore are the computational costs [23]_.\n",
-       "\n",
-       "(R)QMC is sometimes improved by passing the points through\n",
-       "a baker's transformation (tent function) prior to using them.\n",
-       "That function has the form :math:`1-2|x-1/2|`. As :math:`x` goes from 0 to\n",
-       "1, this function goes from 0 to 1 and then back. It is very\n",
-       "useful to produce a periodic function for lattice rules [14]_,\n",
-       "and sometimes it improves the convergence rate [24]_.\n",
-       "\n",
-       "It is not straightforward to apply QMC methods to Markov\n",
-       "chain Monte Carlo (MCMC).  We can think of MCMC as using\n",
-       ":math:`n=1` point in :math:`[0,1]^{d}` for very large :math:`d`, with\n",
-       "ergodic results corresponding to :math:`d \\to \\infty`. One proposal is\n",
-       "in [25]_ and under strong conditions an improved rate of convergence\n",
-       "has been shown [26]_.\n",
-       "\n",
-       "Returning to Sobol' points: there are many versions depending\n",
-       "on what are called direction numbers. Those are the result of\n",
-       "searches and are tabulated. A very widely used set of direction\n",
-       "numbers come from [27]_. It is extensible in dimension up to\n",
-       ":math:`d=21201`.\n",
-       "\n",
-       "References\n",
-       "----------\n",
-       ".. [1] Owen, Art B. \"Monte Carlo Book: the Quasi-Monte Carlo parts.\" 2019.\n",
-       ".. [2] Niederreiter, Harald. \"Random number generation and quasi-Monte Carlo\n",
-       "   methods.\" Society for Industrial and Applied Mathematics, 1992.\n",
-       ".. [3] Dick, Josef, Frances Y. Kuo, and Ian H. Sloan. \"High-dimensional\n",
-       "   integration: the quasi-Monte Carlo way.\" Acta Numerica no. 22: 133, 2013.\n",
-       ".. [4] Aho, A. V., C. Aistleitner, T. Anderson, K. Appel, V. Arnol'd, N.\n",
-       "   Aronszajn, D. Asotsky et al. \"W. Chen et al.(eds.), \"A Panorama of\n",
-       "   Discrepancy Theory\", Sringer International Publishing,\n",
-       "   Switzerland: 679, 2014.\n",
-       ".. [5] Hickernell, Fred J. \"Koksma-Hlawka Inequality.\" Wiley StatsRef:\n",
-       "   Statistics Reference Online, 2014.\n",
-       ".. [6] Owen, Art B. \"On dropping the first Sobol' point.\" :arxiv:`2008.08051`,\n",
-       "   2020.\n",
-       ".. [7] L'Ecuyer, Pierre, and Christiane Lemieux. \"Recent advances in randomized\n",
-       "   quasi-Monte Carlo methods.\" In Modeling uncertainty, pp. 419-474. Springer,\n",
-       "   New York, NY, 2002.\n",
-       ".. [8] DiCiccio, Thomas J., and Bradley Efron. \"Bootstrap confidence\n",
-       "   intervals.\" Statistical science: 189-212, 1996.\n",
-       ".. [9] Dimov, Ivan T. \"Monte Carlo methods for applied scientists.\" World\n",
-       "   Scientific, 2008.\n",
-       ".. [10] Caflisch, Russel E., William J. Morokoff, and Art B. Owen. \"Valuation\n",
-       "   of mortgage backed securities using Brownian bridges to reduce effective\n",
-       "   dimension.\" Journal of Computational Finance: no. 1 27-46, 1997.\n",
-       ".. [11] Sloan, Ian H., and Henryk Wozniakowski. \"When are quasi-Monte Carlo\n",
-       "   algorithms efficient for high dimensional integrals?.\" Journal of Complexity\n",
-       "   14, no. 1 (1998): 1-33.\n",
-       ".. [12] Owen, Art B., and Daniel Rudolf, \"A strong law of large numbers for\n",
-       "   scrambled net integration.\" SIAM Review, to appear.\n",
-       ".. [13] Loh, Wei-Liem. \"On the asymptotic distribution of scrambled net\n",
-       "   quadrature.\" The Annals of Statistics 31, no. 4: 1282-1324, 2003.\n",
-       ".. [14] Sloan, Ian H. and S. Joe. \"Lattice methods for multiple integration.\"\n",
-       "   Oxford University Press, 1994.\n",
-       ".. [15] Dick, Josef, and Friedrich Pillichshammer. \"Digital nets and sequences:\n",
-       "   discrepancy theory and quasi-Monte Carlo integration.\" Cambridge University\n",
-       "   Press, 2010.\n",
-       ".. [16] Dick, Josef, F. Kuo, Friedrich Pillichshammer, and I. Sloan.\n",
-       "   \"Construction algorithms for polynomial lattice rules for multivariate\n",
-       "   integration.\" Mathematics of computation 74, no. 252: 1895-1921, 2005.\n",
-       ".. [17] Sobol', Il'ya Meerovich. \"On the distribution of points in a cube and\n",
-       "   the approximate evaluation of integrals.\" Zhurnal Vychislitel'noi Matematiki\n",
-       "   i Matematicheskoi Fiziki 7, no. 4: 784-802, 1967.\n",
-       ".. [18] Halton, John H. \"On the efficiency of certain quasi-random sequences of\n",
-       "   points in evaluating multi-dimensional integrals.\" Numerische Mathematik 2,\n",
-       "   no. 1: 84-90, 1960.\n",
-       ".. [19] Faure, Henri. \"Discrepance de suites associees a un systeme de\n",
-       "   numeration (en dimension s).\" Acta arithmetica 41, no. 4: 337-351, 1982.\n",
-       ".. [20] Niederreiter, Harold, and Chaoping Xing. \"Low-discrepancy sequences and\n",
-       "   global function fields with many rational places.\" Finite Fields and their\n",
-       "   applications 2, no. 3: 241-273, 1996.\n",
-       ".. [21] Hong, Hee Sun, and Fred J. Hickernell. \"Algorithm 823: Implementing\n",
-       "   scrambled digital sequences.\" ACM Transactions on Mathematical Software\n",
-       "   (TOMS) 29, no. 2: 95-109, 2003.\n",
-       ".. [22] Dick, Josef. \"Higher order scrambled digital nets achieve the optimal\n",
-       "   rate of the root mean square error for smooth integrands.\" The Annals of\n",
-       "   Statistics 39, no. 3: 1372-1398, 2011.\n",
-       ".. [23] Niederreiter, Harald. \"Multidimensional numerical integration using\n",
-       "   pseudorandom numbers.\" In Stochastic Programming 84 Part I, pp. 17-38.\n",
-       "   Springer, Berlin, Heidelberg, 1986.\n",
-       ".. [24] Hickernell, Fred J. \"Obtaining O (N-2+e) Convergence for Lattice\n",
-       "   Quadrature Rules.\" In Monte Carlo and Quasi-Monte Carlo Methods 2000,\n",
-       "   pp. 274-289. Springer, Berlin, Heidelberg, 2002.\n",
-       ".. [25] Owen, Art B., and Seth D. Tribble. \"A quasi-Monte Carlo Metropolis\n",
-       "   algorithm.\" Proceedings of the National Academy of Sciences 102,\n",
-       "   no. 25: 8844-8849, 2005.\n",
-       ".. [26] Chen, Su. \"Consistency and convergence rate of Markov chain quasi Monte\n",
-       "   Carlo with examples.\" PhD diss., Stanford University, 2011.\n",
-       ".. [27] Joe, Stephen, and Frances Y. Kuo. \"Constructing Sobol sequences with\n",
-       "   better two-dimensional projections.\" SIAM Journal on Scientific Computing\n",
-       "   30, no. 5: 2635-2654, 2008."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "___________________________________________________________________________\n",
+      "   \n",
+      "                                  Kriging\n",
+      "___________________________________________________________________________\n",
+      "   \n",
+      " Problem size\n",
+      "   \n",
+      "      # training points.        : 10\n",
+      "   \n",
+      "___________________________________________________________________________\n",
+      "   \n",
+      " Training\n",
+      "   \n",
+      "   Training ...\n",
+      "fmin_cobyla failed but the best value is retained\n",
+      "   Training - done. Time (sec):  0.0281522\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/smt/surrogate_models/krg_based.py:312: UserWarning: Kriging-based surrogate is not intended to handle multiple training output data (yt dim should be 1, got 2). The quality of the resulting surrogate might not be as good as if each training output is used separately to build a dedicated surrogate. This warning might become a hard error in future SMT versions.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
-    "var_bound = np.array([[0,2], [1,3]])\n",
-    "sp.stats.qmc?"
+    "sm = KRG(theta0=[1e-2])\n",
+    "sm.set_training_values(xt, yt)\n",
+    "sm.train()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc06f557-8563-4fd5-8fc4-b9608e95c9bc",
+   "cell_type": "markdown",
+   "id": "a36b91c7-4037-4890-b41e-ffe52294157e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# TODO:\n",
+    "- make testing data\n",
+    "- plot data\n",
+    "- possibly reformat to be in lower dimension"
+   ]
   }
  ],
  "metadata": {
