--- a/1-21.ipynb
+++ b/1-21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6cdc7e7a-6614-4e87-bd04-a3081ea8a553",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "d6042c16-67aa-402f-920e-71f1f3ce536c",
    "metadata": {},
    "outputs": [],
@@ -27,14 +27,14 @@
     "    \n",
     "def loss(x1,x2,y1):\n",
     "    if x1 == x2:\n",
-    "        return 0\n",
+    "        return (0,0)\n",
     "    y2 = 1/(x2-x1) + y1\n",
     "    return dblquad(integrand, x1,x2, lambda t: y1,lambda t: y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "550fb988-9cc4-4c87-8a12-fba0edee3fb5",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "(0.5577462853510337, 8.291374381535406e-15)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "20f344d6-76c0-4a9a-a3af-cf90572aee08",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,12 @@
     "xlimits = np.array([[0.0, 4.0], [0.0, 3.0], [0.0,4.0]])\n",
     "sampling = LHS(xlimits=xlimits)\n",
     "xt = sampling(10)\n",
-    "yt = np.array([loss(i,j,k) for i,j,k in x])"
+    "yt = np.array([a for (a,b) in [loss(i,j,k) for i,j,k in xt]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "acf174d0-7ae6-442e-b157-69d860464964",
    "metadata": {},
    "outputs": [
@@ -90,16 +90,7 @@
       " Training\n",
       "   \n",
       "   Training ...\n",
-      "fmin_cobyla failed but the best value is retained\n",
-      "   Training - done. Time (sec):  0.0281522\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/smt/surrogate_models/krg_based.py:312: UserWarning: Kriging-based surrogate is not intended to handle multiple training output data (yt dim should be 1, got 2). The quality of the resulting surrogate might not be as good as if each training output is used separately to build a dedicated surrogate. This warning might become a hard error in future SMT versions.\n",
-      "  warnings.warn(\n"
+      "   Training - done. Time (sec):  0.5921459\n"
      ]
     }
    ],
@@ -118,6 +109,16 @@
     "- make testing data\n",
     "- plot data\n",
     "- possibly reformat to be in lower dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf21b973-768d-4f79-acd2-d62ba19398da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test = "
    ]
   }
  ],
