--- a/uw_wxml.ipynb
+++ b/uw_wxml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "56ceee22-2e33-4cfc-8301-22e7d5fdb9d4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "47e7c2dd-92cd-4256-9af5-753c97dc370e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "3d4faa7b-f8f3-4583-9e51-c4e63c074a3c",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "a182558b-1cb6-4a44-8cd0-495a8fa6171a",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "67073f90-f082-467c-a31a-da3dcc1db2b3",
    "metadata": {},
    "outputs": [],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "3e6a07c2",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
     "        violation = np.maximum(\n",
     "            0,\n",
     "            np.maximum(\n",
-    "            self._lower_bounds - rescaled_data, rescaled_data - self._upper_bound\n",
+    "            self._lower_bounds - rescaled_data, rescaled_data - self._upper_bounds\n",
     "            ),\n",
     "        )\n",
     "\n",
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "6ac6e345-07b0-4fc2-8c9f-caada69c5aed",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "4d7fa012",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "8ef5ea3d-1e56-4a2c-b3ea-b57045e55c33",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        " 'constraints': ['c1', 'c2', 'c3', 'c4']}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,21 +1080,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "6aee4356-5f26-4f84-8347-30a9f2d8cecd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ConstraintCalculator' object has no attribute '_upper_bound'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[62], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m num_sites \u001b[38;5;241m=\u001b[39m nind\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      6\u001b[0m num_sites \u001b[38;5;241m=\u001b[39m nind\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m10\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m5\u001b[39m\n\u001b[0;32m----> 7\u001b[0m exp_data \u001b[38;5;241m=\u001b[39m \u001b[43mtesting\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhs100\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnind\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnind\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m exp_data \u001b[38;5;241m=\u001b[39m testing(hs100, \u001b[38;5;28mint\u001b[39m((nind\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(nind\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      9\u001b[0m exp_data \u001b[38;5;241m=\u001b[39m testing(hs100, \u001b[38;5;28mint\u001b[39m((nind\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(nind\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m20\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[60], line 22\u001b[0m, in \u001b[0;36mtesting\u001b[0;34m(local_eval, num_sites)\u001b[0m\n\u001b[1;32m     20\u001b[0m local_eval(exp_data)\n\u001b[1;32m     21\u001b[0m my_constraint_calculator \u001b[38;5;241m=\u001b[39m ConstraintCalculator(local_problem)\n\u001b[0;32m---> 22\u001b[0m exp_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__conviol__\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mmy_constraint_calculator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexp_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m exp_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__State__\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mcut(exp_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__conviol__\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39minf, eps, \u001b[38;5;241m100\u001b[39m\u001b[38;5;241m*\u001b[39meps])\n\u001b[1;32m     24\u001b[0m feasible_sites \u001b[38;5;241m=\u001b[39m (exp_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__State__\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFeasible\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msum()\n",
-      "Cell \u001b[0;32mIn[58], line 163\u001b[0m, in \u001b[0;36mConstraintCalculator.__call__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    155\u001b[0m rescaled_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_shift_scale\u001b[38;5;241m.\u001b[39mdesign_to_optimizer_space(\n\u001b[1;32m    156\u001b[0m     data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_constraint_names\n\u001b[1;32m    157\u001b[0m )\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# Calculate individual constraint violation\u001b[39;00m\n\u001b[1;32m    160\u001b[0m violation \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmaximum(\n\u001b[1;32m    161\u001b[0m     \u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m    162\u001b[0m     np\u001b[38;5;241m.\u001b[39mmaximum(\n\u001b[0;32m--> 163\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_lower_bounds \u001b[38;5;241m-\u001b[39m rescaled_data, rescaled_data \u001b[38;5;241m-\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_upper_bound\u001b[49m\n\u001b[1;32m    164\u001b[0m     ),\n\u001b[1;32m    165\u001b[0m )\n\u001b[1;32m    167\u001b[0m \u001b[38;5;66;03m# Calculate total violation for each point\u001b[39;00m\n\u001b[1;32m    168\u001b[0m total_violation\u001b[38;5;241m.\u001b[39mloc[valid_vals] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compute_violation(violation[valid_vals])\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ConstraintCalculator' object has no attribute '_upper_bound'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
+      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
+      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
+      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
+      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n"
      ]
     }
    ],
