--- a/uw_wxml.ipynb
+++ b/uw_wxml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "id": "56ceee22-2e33-4cfc-8301-22e7d5fdb9d4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "id": "47e7c2dd-92cd-4256-9af5-753c97dc370e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "id": "3d4faa7b-f8f3-4583-9e51-c4e63c074a3c",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
     "        :return: List providing the initial guess to use with an optimizer\n",
     "        :rtype: list\n",
     "        \"\"\"\n",
-    "        return pd.Series([1, 2, 0, 4, 0, 1, 1])\n",
+    "        return [1, 2, 0, 4, 0, 1, 1]\n",
     "\n",
     "    def __call__(self, sites: pd.DataFrame) -> None:\n",
     "        \"\"\"Call to the HS100 function\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "a182558b-1cb6-4a44-8cd0-495a8fa6171a",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "id": "67073f90-f082-467c-a31a-da3dcc1db2b3",
    "metadata": {},
    "outputs": [],
@@ -653,8 +653,8 @@
     "                        design_space_problem[overall_type][element][\"default\"] = \\\n",
     "                            design_space_problem[overall_type][element][\"default\"] \\\n",
     "                                / self.scale[element] - self.shift[element]\n",
-    "                design_space_problem[overall_type][element][\"shift\"] = self.shift[element][\"shift\"]\n",
-    "                design_space_problem[overall_type][element][\"scale\"] = self.scale[element][\"shift\"]\n",
+    "                design_space_problem[overall_type][element][\"shift\"] = self.shift[element]\n",
+    "                design_space_problem[overall_type][element][\"scale\"] = self.scale[element]\n",
     "        return design_space_problem\n",
     "    \n",
     "    def _dict_to_series(self, var_def: dict) -> Tuple[pd.Series, pd.Series]:\n",
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "id": "3e6a07c2",
    "metadata": {},
    "outputs": [],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "6ac6e345-07b0-4fc2-8c9f-caada69c5aed",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "id": "4d7fa012",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1032,7 @@
     "    local_eval(exp_data)\n",
     "    my_constraint_calculator = ConstraintCalculator(local_problem)\n",
     "    exp_data['__conviol__'] = my_constraint_calculator(exp_data)\n",
-    "    exp_data['__State__'] = pd.cut(exp_data['__conviol__'], [-np.inf, eps, 100*eps])\n",
+    "    exp_data['__State__'] = pd.cut(exp_data['__conviol__'], [-np.inf, eps, 100*eps, np.inf], include_lowest=True, labels=['Feasible', 'Nearly Feasible', \"Infeasible\"]).astype(\"str\")\n",
     "    feasible_sites = (exp_data['__State__'] == 'Feasible').sum()\n",
     "    percentage = feasible_sites/num_sites * 100\n",
     "    print(f\"Test evaluator {local_eval.name} with {len(local_problem['variables'])} variables {percentage}% feasible sites\")\n",
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "id": "8ef5ea3d-1e56-4a2c-b3ea-b57045e55c33",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        " 'constraints': ['c1', 'c2', 'c3', 'c4']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "id": "6aee4356-5f26-4f84-8347-30a9f2d8cecd",
    "metadata": {},
    "outputs": [
@@ -1090,9 +1090,9 @@
      "text": [
       "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
       "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
+      "Test evaluator hs100 with 7 variables 0.4166666666666667% feasible sites\n",
       "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
-      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n",
-      "Test evaluator hs100 with 7 variables 0.0% feasible sites\n"
+      "Test evaluator hs100 with 7 variables 0.4571428571428572% feasible sites\n"
      ]
     }
    ],
@@ -1107,16 +1107,27 @@
     "exp_data = testing(hs100, int((nind+1)*(nind+2)/2)*10)\n",
     "exp_data = testing(hs100, int((nind+1)*(nind+2)/2)*20)\n",
     "exp_data = testing(hs100, nind*10)\n",
-    "exp_data = testing(hs100, nind*10*5)"
+    "exp_data = testing(hs100, nind*10*5*10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "b3a3264f-a546-4d08-b599-3cc0d1c4166a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test evaluator hs100 with 7 variables 0.5785714285714285% feasible sites\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_sites = nind*10*5\n",
+    "exp_data = testing(hs100, nind*2000)"
+   ]
   }
  ],
  "metadata": {
